--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="Valar Morghulis">
 
-    <meta property="og:url" content="http://127.0.0.1:1313/404.html">
+    <meta property="og:url" content="https://yaphetszz.github.io/404.html">
   <meta property="og:site_name" content="Y4ph3tS blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Valar Morghulis">
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://127.0.0.1:1313/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
+      <a href="https://yaphetszz.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
       <span class="app-header-title">Y4ph3tS blog</span>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
