--- a/atta/index.html
+++ b/atta/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="附件列表">
   <meta name="twitter:description" content="本目录下列出了文章中可能包含的一些附件，直接点击链接下载。 内网渗透.xmind">
 
-    <meta property="og:url" content="http://localhost:1313/atta/">
+    <meta property="og:url" content="https://yaphetszz.github.io/atta/">
   <meta property="og:site_name" content="Y4ph3tS blog">
   <meta property="og:title" content="附件列表">
   <meta property="og:description" content="本目录下列出了文章中可能包含的一些附件，直接点击链接下载。 内网渗透.xmind">
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://localhost:1313/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
+      <a href="https://yaphetszz.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
       <span class="app-header-title">Y4ph3tS blog</span>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">主页</a>
