--- a/links/index.html
+++ b/links/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:description" content="友链 ol4three
 友链旺铺招租，有需要联系我">
 
-    <meta property="og:url" content="http://localhost:1313/links/">
+    <meta property="og:url" content="https://yaphetszz.github.io/links/">
   <meta property="og:site_name" content="Y4ph3tS blog">
   <meta property="og:title" content="Y4ph3tS blog">
   <meta property="og:description" content="友链 ol4three
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://localhost:1313/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
+      <a href="https://yaphetszz.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="Y4ph3tS" /></a>
       <span class="app-header-title">Y4ph3tS blog</span>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">主页</a>
