--- a/links/index.html
+++ b/links/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:title" content="Y4ph3tS blog">
   <meta name="twitter:description" content="友链 Skay’s Blog
 ol4three
+L1Nk8ug’s Blog
 友链旺铺招租，有需要联系我">
 
     <meta property="og:url" content="https://yaphetszz.github.io/links/">
@@ -24,6 +25,7 @@ ol4three
   <meta property="og:title" content="Y4ph3tS blog">
   <meta property="og:description" content="友链 Skay’s Blog
 ol4three
+L1Nk8ug’s Blog
 友链旺铺招租，有需要联系我">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
@@ -71,6 +73,7 @@ ol4three
       <h1 id="友链">友链</h1>
 <p><a href="https://skay.rce.la/">Skay&rsquo;s Blog</a></p>
 <p><a href="https://www.ol4three.com/">ol4three</a></p>
+<p><a href="https://l-i-n-g-c-e-n-g.github.io">L1Nk8ug&rsquo;s Blog</a></p>
 <h1 id="友链旺铺招租有需要联系我">友链旺铺招租，有需要联系我</h1>
 
     </div>
